git subrepo clone --force https://gitlab.com/samcns/uzu.git samcns/uzu
subrepo:
  subdir:   "samcns/uzu"
  merged:   "7a836bc"
upstream:
  origin:   "https://gitlab.com/samcns/uzu.git"
  branch:   "master"
  commit:   "7a836bc"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/samcns/uzu/.gitlab-ci.yml
+++ b/samcns/uzu/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-image: rakudo-star:2016.07
+image: rakudo-star:latest
 
 before_script:
-  - panda update
-  - panda --notests installdeps .
-  - panda --notests install .
+  - zef update
+  - zef install --depsonly --/test .
+  - zef --/test install .
 test:
   script:
     - prove -ve 'perl6 -Ilib'
