git subrepo clone --force git://github.com/slobo/Perl6-X11-Xlib-Raw.git slobo/Perl6-X11-Xlib-Raw
subrepo:
  subdir:   "slobo/Perl6-X11-Xlib-Raw"
  merged:   "bd2ba17"
upstream:
  origin:   "git://github.com/slobo/Perl6-X11-Xlib-Raw.git"
  branch:   "master"
  commit:   "bd2ba17"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/slobo/Perl6-X11-Xlib-Raw/.travis.yml
+++ b/slobo/Perl6-X11-Xlib-Raw/.travis.yml
@@ -10,6 +10,7 @@ perl6:
 
 install:
   - rakudobrew build panda
+  - rakudobrew build zef
   - panda installdeps .
 
-script: prove -v -e "perl6 -Ilib" t/ && panda install .
+script: prove -v -e "perl6 -Ilib" t/ && zef install .
