--- a/zoffixznet/perl6-WWW/.travis.yml
+++ b/zoffixznet/perl6-WWW/.travis.yml
@@ -3,5 +3,5 @@ perl6:
     - latest
 
 install:
-    - rakudobrew build-panda
-    - panda installdeps .
+    - rakudobrew build-zef
+    - ONLINE_TESTING=1 zef install .
