git subrepo clone --force git://github.com/jnthn/test-mock.git jnthn/test-mock
subrepo:
  subdir:   "jnthn/test-mock"
  merged:   "6072f86"
upstream:
  origin:   "git://github.com/jnthn/test-mock.git"
  branch:   "master"
  commit:   "6072f86"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/jnthn/test-mock/.travis.yml
+++ b/jnthn/test-mock/.travis.yml
@@ -2,7 +2,11 @@ language: perl6
 
 perl6:
     - latest
-    - 2016.01
+    - 2017.03
+
+install:
+    - rakudobrew build-panda
+    - panda --notests installdeps .
 
 script:
     - PERL6LIB=lib prove -v -r --exec=perl6 t/
