--- a/scmorrison/JS-Minify/.travis.yml
+++ b/scmorrison/JS-Minify/.travis.yml
@@ -3,8 +3,9 @@ install:
   - curl -O -J -L https://github.com/nxadm/rakudo-pkg/releases/download/2017.01/perl6-rakudo-moarvm-ubuntu16.04_20170100-01_amd64.deb
   - sudo dpkg -i perl6-rakudo-moarvm-ubuntu16.04_20170100-01_amd64.deb
   - export PATH=/opt/rakudo/bin:~/.perl6/bin:$PATH
-  - /opt/rakudo/bin/install_zef_as_user.sh
-  - ~/.perl6/bin/zef --force --/test install .
+  - git clone https://github.com/ugexe/zef $HOME/zef
+  - perl6 -I $HOME/zef/lib $HOME/zef/bin/zef --depsonly install .
+  - perl6 -I $HOME/zef/lib $HOME/zef/bin/zef --force --/test install .
 script:
   - prove -v -e 'perl6 -Ilib' t/
 sudo: sudo 
