git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "e15bbf8"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "e15bbf8"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/perl6/doc/html/.htaccess
+++ b/perl6/doc/html/.htaccess
@@ -6,7 +6,11 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=permanent,L]
 RewriteCond %{HTTP_HOST} ^doc.perl6.org [NC]
 RewriteRule ^(.*)$ https://docs.perl6.org/$1 [R=permanent,L]
 
-RewriteRule ^type/(.*?)::(.*) /type/$1\$COLON\$COLON$2 [N]
+# We no longer need this, as we swapped the generator to not use the $COLONs on
+# non-Windows operating systems. Since we used that earlier, rewrite in reverse
+# in case someone is using the long and awful URLs
+# RewriteRule ^type/(.*?)::(.*) /type/$1\$COLON\$COLON$2 [N]
+RewriteRule ^type/(.*?)\$COLON\$COLON(.*) /type/$1::$2 [N]
 
 Redirect 301 /language/5to6 https://docs.perl6.org/language/5to6-nutshell
 Redirect 301 /examples      http://examples.perl6.org/
