git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "6fce965"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "6fce965"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/perl6/doc/html/.htaccess
+++ b/perl6/doc/html/.htaccess
@@ -11,6 +11,8 @@ RewriteRule ^(.*)$ https://docs.perl6.org/$1 [R=permanent,L]
 # in case someone is using the long and awful URLs
 # RewriteRule ^type/(.*?)::(.*) /type/$1\$COLON\$COLON$2 [N]
 RewriteRule ^type/(.*?)\$COLON\$COLON(.*) /type/$1::$2 [N]
+RewriteRule ^type/(.*?)\$COLON(.*) /type/$1::$2 [N]
+RewriteRule ^type/(.*?)\$REVERSE_SOLIDUS(.*) /type/$1%5c$2 [N]
 
 Redirect 301 /language/5to6 https://docs.perl6.org/language/5to6-nutshell
 Redirect 301 /examples      http://examples.perl6.org/
