git subrepo clone --force https://github.com/PostCocoon/P6-TagLibC.git PostCocoon/P6-TagLibC
subrepo:
  subdir:   "PostCocoon/P6-TagLibC"
  merged:   "90a899e"
upstream:
  origin:   "https://github.com/PostCocoon/P6-TagLibC.git"
  branch:   "master"
  commit:   "90a899e"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/PostCocoon/P6-TagLibC/.travis.yml
+++ b/PostCocoon/P6-TagLibC/.travis.yml
@@ -16,4 +16,4 @@ install:
   - rakudobrew build zef
   - zef install --depsonly .
 
-script: prove -v -e "perl6 -Ilib" t/
+script: AUTHOR_TESTING=1 prove -v -e "perl6 -Ilib" t/
