git subrepo clone --force https://github.com/skids/perl6sum.git skids/perl6sum
subrepo:
  subdir:   "skids/perl6sum"
  merged:   "c2a8ac6"
upstream:
  origin:   "https://github.com/skids/perl6sum.git"
  branch:   "master"
  commit:   "c2a8ac6"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/skids/perl6sum/META6.yaml
+++ b/skids/perl6sum/META6.yaml
@@ -7,7 +7,7 @@ emulates:
   Sum::Digest::MD5: 'Digest::MD5:auth<skids>'
 license: http://www.perlfoundation.org/artistic_license_2_0
 name: Sum
-perl: v6.0.0
+perl: 6.*
 provides:
   Sum: lib/Sum.pm6
   Sum::HAS: lib/Sum/HAS.pm6
