git subrepo clone --force https://github.com/skids/perl6-Proc-Screen.git skids/perl6-Proc-Screen
subrepo:
  subdir:   "skids/perl6-Proc-Screen"
  merged:   "1e8b756"
upstream:
  origin:   "https://github.com/skids/perl6-Proc-Screen.git"
  branch:   "master"
  commit:   "1e8b756"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/skids/perl6-Proc-Screen/META6.yaml
+++ b/skids/perl6-Proc-Screen/META6.yaml
@@ -1,17 +1,17 @@
 ---
 authors:
   - Brian S. Julin
-depends: 
+depends:
   - File::Temp
   - Test
-build-depends: 
+build-depends:
   - File::Temp
   - Test
 test-depends:
   - File::Temp
   - Test
 description: Perl6 -- manage GNU screen sessions and use them for tests
-license: http://www.perlfoundation.org/artistic_license_2_0
+license: Artistic-2.0
 name: Proc::Screen
 perl: 6
 provides:
