git subrepo clone --force https://github.com/spitsh/spitsh.git spitsh/spitsh
subrepo:
  subdir:   "spitsh/spitsh"
  merged:   "caa12b8"
upstream:
  origin:   "https://github.com/spitsh/spitsh.git"
  branch:   "master"
  commit:   "caa12b8"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/spitsh/spitsh/.travis.yml
+++ b/spitsh/spitsh/.travis.yml
@@ -13,5 +13,7 @@ env:
 
 script:
   - zef install . && spit eval 'say "hello world"'
-  - spit --in-docker=alpine compile spec/base/sanity.t
-  - prove -v -r -e 'spit --in-docker=alpine compile' spec/
+  - spit -d compile spec/base/sanity.t
+  - spit prove spec/base -d=alpine,centos,debian
+  - spit prove spec/packages -d=alpine,centos,debian
+  - spit prove spec/docker -s -d=alpine,centos,debian
