git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "aaafe4e"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "aaafe4e"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-Util-p6/.travis.yml
+++ b/kuerbis/Term-Choose-Util-p6/.travis.yml
@@ -5,7 +5,9 @@ language: perl6
 perl6:
   - latest
 install:
-  - rakudobrew build-panda
-  - panda installdeps .
-  - panda install Term::Choose
+  - rakudobrew build zef
+  - zef install .
+  - zef install Term::Choose
+  - zef install Term::Choose::NCurses
+  - zef install Term::Choose::LineFold
 sudo: false
