git subrepo clone --force https://github.com/scriptkitties/p6-Hash-Merge.git scriptkitties/p6-Hash-Merge
subrepo:
  subdir:   "scriptkitties/p6-Hash-Merge"
  merged:   "750b429"
upstream:
  origin:   "https://github.com/scriptkitties/p6-Hash-Merge.git"
  branch:   "master"
  commit:   "750b429"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/scriptkitties/p6-Hash-Merge/.travis.yml
+++ b/scriptkitties/p6-Hash-Merge/.travis.yml
@@ -2,8 +2,9 @@ language: perl6
 
 perl6:
   - latest
-  - "2017.03"
   - nom
+  - "2017.03"
+  - "2017.04"
 
 os:
   - linux
@@ -21,5 +22,5 @@ notifications:
     on_success: change
     on_failure: always
     template:
-      - "Hash::Merge build %{result}. %{author} '%{commit_message}'"
-      - "%{build_url} %{compare_url}"
+      - "Hash::Merge build %{result}. %{author} '%{commit_message}' → %{build_url}"
+
