git subrepo clone --force git://github.com/MARTIMM/mongo-perl6-driver.git MARTIMM/mongo-perl6-driver
subrepo:
  subdir:   "MARTIMM/mongo-perl6-driver"
  merged:   "2233d7b"
upstream:
  origin:   "git://github.com/MARTIMM/mongo-perl6-driver.git"
  branch:   "master"
  commit:   "2233d7b"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/MARTIMM/mongo-perl6-driver/xt/Sxml/SemiXML.toml
+++ b/MARTIMM/mongo-perl6-driver/xt/Sxml/SemiXML.toml
@@ -5,8 +5,8 @@
   fileext       = 'html'
 
 [output.program]
-  pdf           = 'wkhtmltopdf - %of.pdf'
-  fmt           = 'xmllint --format - > %of.%oe'
+  pdf           = 'wkhtmltopdf - %op/%of.pdf'
+  fmt           = 'xmllint --format - > %op/%of.%oe'
 
 [module]
   report        = 'SxmlLib::Testing::Report'
