--- a/MARTIMM/mongo-perl6-driver/.travis.yml
+++ b/MARTIMM/mongo-perl6-driver/.travis.yml
@@ -8,9 +8,11 @@ perl6:
   - latest
 
 install:
-  - rakudobrew build-zef ${TRAVIS_PERL6_VERSION#latest}
-  - zef --depsonly install .
   - sh $TRAVIS_BUILD_DIR/Travis-ci/install-mongodb.sh 3.2.9
+  - rakudobrew build-zef ${TRAVIS_PERL6_VERSION#latest}
+  - zef --/test install Crane
+  - zef --/test install Config::TOML
+  - zef --depsonly install .
 
 # Cannot use the mongod service because the version is too low (2.4.12)
 #services:
@@ -19,8 +21,8 @@ install:
 git:
   depth: 5
 
-cache:
+#cache:
 #  timeout: 1200
-  directories:
-    - $HOME/Travis-ci
-    - $HOME/.rakudobrew
+#  directories:
+#    - $HOME/Travis-ci
+#    - $HOME/.rakudobrew
