git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "2f35bc2"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "2f35bc2"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-p6/.travis.yml
+++ b/kuerbis/Term-Choose-p6/.travis.yml
@@ -5,9 +5,8 @@ language: perl6
 perl6:
   - latest
 install:
-  - rakudobrew build-panda
-  - panda installdeps .
-  - panda install NCurses
-  - panda install Term::termios
-  - panda install Terminal::WCWidth
+  - rakudobrew build zef
+  - zef --depsonly install .
+  - zef install Term::termios
+  - zef install Terminal::WCWidth
 sudo: false
