git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "0cdd1ae"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "0cdd1ae"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-Util-p6/.travis.yml
+++ b/kuerbis/Term-Choose-Util-p6/.travis.yml
@@ -6,7 +6,7 @@ perl6:
   - latest
 install:
   - rakudobrew build zef
-  - zef install .
+  - zef --depsonly install .
   - zef install Term::Choose
   - zef install Term::Choose::NCurses
   - zef install Term::Choose::LineFold
