--- a/kuerbis/Term-Form-p6/.travis.yml
+++ b/kuerbis/Term-Form-p6/.travis.yml
@@ -5,8 +5,9 @@ language: perl6
 perl6:
   - latest
 install:
-  - rakudobrew build-panda
-  - panda installdeps .
-  - panda install Term::Choose::NCurses
-  - panda install Term::Choose::LineFold
+  - rakudobrew build zef
+  - zef --depsonly install .
+  - zef install Term::Choose
+  - zef install Term::Choose::NCurses
+  - zef install Term::Choose::LineFold
 sudo: false
