--- a/MARTIMM/semaphore-readerswriters/.travis.yml
+++ b/MARTIMM/semaphore-readerswriters/.travis.yml
@@ -8,10 +8,9 @@ perl6:
   - latest
 
 install:
-  - rakudobrew build-panda ${TRAVIS_PERL6_VERSION#latest}
-  - panda installdeps .
+  - rakudobrew build-zef ${TRAVIS_PERL6_VERSION#latest}
+  - zef --depsonly install .
 
-cache:
-  directories:
-    - $TRAVIS_BUILD_DIR/.rakudobrew
-
+#cache:
+#  directories:
+#    - $TRAVIS_BUILD_DIR/.rakudobrew
