git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "953a45a"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "953a45a"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-p6/.travis.yml
+++ b/kuerbis/Term-Choose-p6/.travis.yml
@@ -7,6 +7,7 @@ perl6:
 install:
   - rakudobrew build zef
   - zef --depsonly install .
+  - zef install LibraryCheck
   - zef install Term::termios
   - zef install Terminal::WCWidth
 sudo: false
